--- a/Navigation/Navigation/TabbedPage1.xaml
+++ b/Navigation/Navigation/TabbedPage1.xaml
@@ -1,11 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Navigation.TabbedPage1">
-    <ContentPage Title="Page1" >
-        <Label Text="Content of Page1" HorizontalOptions="Center" VerticalOptions="Center"/>
-    </ContentPage>
-    <ContentPage Title="Page2">
+            xmlns:local="clr-namespace:Navigation"
+            x:Class="Navigation.TabbedPage1">
+    <local:ContactPage Title ="Contacts"/>
+
+    <NavigationPage>
+        <x:Arguments>
+            <ContentPage Title="Page1" >
+                <Label Text="Content of Page1" HorizontalOptions="Center" VerticalOptions="Center"/>
+            </ContentPage>
+        </x:Arguments>
+    </NavigationPage>
+
+     <ContentPage Title="Page2">
         <Label Text="Content of Page2" HorizontalOptions="Center" VerticalOptions="Center"/>
     </ContentPage>
 </TabbedPage>
